# cisco-nso-mcp-server

./: .gitignore  README.md  app.py  loggerfactory.py  mcp_server.py  mcp_test_client.py  openai_client.py  pyproject.toml  server.py
.streamlit/: config.toml
cisco_nso_mcp_server/: server.py
cisco_nso_mcp_server/services/: devices.py  environment.py  prompts.py
services/: devices.py  environment.py
utils/: __init__.py  loggerfactory.py  logging.py
